# RecipeGrove

./: .gitignore  .recipegroverc.example  AGENT.md  CONTRIBUTING.md  LICENSE  README.md  RecipeGrove-INIT_PROMPT.md  TEMPLATE_USAGE.md  TESTING_FEEDBACK.md  TODOS.md  pyproject.toml  secrets_template.json  setup.sh
.github/workflows/: setup-template.yml
AgentUsage/: README.md  RecipeGrove-INIT_PROMPT.md  RecipeGrove-PROJECT_SPEC.md  documentation_standards.md  git_guide.md  house_agents.md  multi_language_guide.md  project_setup.md
AgentUsage/pre_commit_hooks/: commit-msg  examples.md  pre-commit-multi-language  prepare-commit-msg
examples/sample-recipes/: bibimbap-grove.md  bibimbap.md  butter-chicken-grove.md  butter-chicken.md  coq-au-vin-grove.md  coq-au-vin.md  falafel-grove.md  falafel.md  moussaka-grove.md  moussaka.md  pad-thai-grove.md  pad-thai.md  pho-bo-grove.md  pho-bo.md  spaghetti-carbonara-grove.md  spaghetti-carbonara.md  tacos-al-pastor-grove.md  tacos-al-pastor.md  tonkotsu-ramen-grove.md  tonkotsu-ramen.md
src/recipegrove/: __init__.py  analyzer.py  cli.py  config.py  emoji_generator.py  html_exporter.py  recipe_enhancer.py  shopping_list.py  themes.py  utils.py
src/recipelgrove/: __init__.py  analyzer.py  cli.py  config.py  emoji_generator.py  parser.py  recipe_enhancer.py  themes.py  utils.py
tests/: __init__.py  test_analyzer.py  test_config.py  test_emoji_generator.py  test_parser.py  test_recipe_enhancer.py  test_themes.py  test_utils.py
