[project]
name = "recipelgrove"
version = "0.1.0"
description = "Transform recipes into emoji-enhanced markdown with intelligent theming"
readme = "README.md"
authors = [
    { name = "AutumnsGrove", email = "noreply@github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]
license = "MIT"
keywords = ["recipe", "emoji", "markdown", "cli", "ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
recipelgrove = "recipelgrove.cli:main"

[project.urls]
Homepage = "https://github.com/AutumnsGrove/RecipeGrove"
Documentation = "https://github.com/AutumnsGrove/RecipeGrove#readme"
Repository = "https://github.com/AutumnsGrove/RecipeGrove.git"
Issues = "https://github.com/AutumnsGrove/RecipeGrove/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

# TODO: Add once OmniParser and EmojiKitchen are published or we confirm their package names
# For now, these will need to be added via:
# uv add git+https://github.com/AutumnsGrove/OmniParser.git
# uv add git+https://github.com/AutumnsGrove/EmojiKitchen.git

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
]
# Coverage options commented out until pytest-cov is properly configured
# Uncomment after installing: uv add --dev pytest-cov
# "--cov=recipelgrove",
# "--cov-report=term-missing",
# "--cov-report=html",

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
